syntax = "proto3";
option go_package = "github.com/kubecc-io/kubecc/pkg/test";

package test;

message Baz {}

service Foo {
  rpc Foo(Baz) returns (Baz);
}

service Bar {
  rpc Bar(stream Baz) returns (stream Baz);
}

service Benchmark {
  rpc Stream(stream Payload) returns (stream Payload);
}

message Test1 {
  int32 Counter = 1;
}

message Test2 {
  string Value = 1;
}

message Test3 {
  int32 counter = 1;
}

message Test4 {
  string Value = 1;
}

message Payload {
  bytes Data = 1;
}